--- a/style.css
+++ b/style.css
@@ -19,4 +19,17 @@ nav{
 }
 .logo{
   height: 165px;
+  cursor: pointer;
+}
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px 20px;                          
+}
+nav ul li a{
+  text-decoration: none;
+  color: #606163;
+}
+nav ul li a:hover{
+  color :#ff4321;
 }
