--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 nav{
   width: 84%;
   margin: auto;
-  padding: 20px 0;
+  padding: 10px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -32,4 +32,13 @@ nav ul li a{
 }
 nav ul li a:hover{
   color :#ff4321;
+}
+.info{
+  margin-left: 8%;
+  margin-top: 15%;
+}
+.info h1{
+  font-size: 70px;
+  color: #212121;
+  margin-bottom: 20px;
 }
