--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@ nav ul li a:hover{
   color: #212121;
   margin-bottom: 20px;
 }
+span{
+  color: #ff4321 ;
+}
+.info p {
+  color: #606163;
+  line-height: 22px;
+}
+.info a {
+  background: #212121;
+  padding: 10px 18px;
+  text-decoration: none;
+  color: #fff;
+  display: inline-block;
+  margin: 30px 0;
+  border-radius: 5px;
+}
