--- a/style.css
+++ b/style.css
@@ -58,3 +58,20 @@ span{
   margin: 30px 0;
   border-radius: 5px;
 }
+.img-box{
+  width: 45%;
+  height:80%;
+  position: absolute;
+  bottom: 0;
+  right: 100px;
+}
+.img-box img{
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform:translateX(-50%) ;
+}
+.back-img{
+  height: 120px;
+}
