--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 nav{
   width: 84%;
   margin: auto;
-  padding: 10px 0;
+  padding: 5px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -58,20 +58,26 @@ span{
   margin: 30px 0;
   border-radius: 5px;
 }
-.img-box{
-  width: 45%;
+ .img-box{
+  width: 5%;
   height:80%;
   position: absolute;
   bottom: 0;
-  right: 100px;
+  left: 1000px;
+  right: 80px;
 }
 .img-box img{
-  height: 100%;
+  height: 90%;
   position: absolute;
-  left: 50%;
   bottom: 0;
   transform:translateX(-50%) ;
+  transition: bottom 1s, left 2s;
+} 
+
+.img-box:hover .back-img{
+  bottom: 10px;
 }
-.back-img{
-  height: 120px;
+
+.img-box:hover .main-img{
+  left: 44%;
 }
